user spotify+active fields, minor data update
