# docs/swagger.yaml
@@ -342,6 +342,12 @@ definitions:
     type: object
   users.User:
     properties:
+      active:
+        default: "false"
+        description: |-
+          Presence/Absence boolean. If false, one is not allowed to log-in (token is rejected),
+          to interract with savla-dev infra in general (by default).
+        type: string
       country:
         description: Country of origin -- to help maintain global contacts.
         type: string
@@ -381,16 +387,14 @@ definitions:
         items:
           type: string
         type: array
+      spotify_link:
+        description: Spotify link to one's profile.
+        type: string
       ssh_keys:
         description: User's SSH public keys array.
         items:
           type: string
         type: array
-      state:
-        default: absent
-        description: Presence/Absence boolean. If 'absent', one is not allowed to
-          log in, to interract with savla-dev infra in general (by default).
-        type: string
       token_base64:
         description: Unique token used for auth purposes, base64'd.
         type: string
